robot-dev/RoboRIO_workspace/.metadata/.plugins/org.eclipse.cdt.ui/O2C2015FRC-orig.build.log
19:57:02 **** Rebuild of configuration Debug for project O2C2015FRC-orig ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Cryogenica/wpilib/cpp/current/include" "-IC:\\Users\\Cryogenica\\Documents\\GitHub\\o2c\\robot-dev\\RoboRIO_workspace\\O2C2015FRC-orig\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
In file included from ..\src\Robot.h:5:0,
                 from ..\src\Robot.cpp:1:
C:\Users\Cryogenica\Documents\GitHub\o2c\robot-dev\RoboRIO_workspace\O2C2015FRC-orig\src/Definitions.h:165:5: warning: 'pMyFieldState' defined but not used [-Wunused-variable]
  } *pMyFieldState;
     ^
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\Cryogenica/wpilib/cpp/current/include" "-IC:\\Users\\Cryogenica\\Documents\\GitHub\\o2c\\robot-dev\\RoboRIO_workspace\\O2C2015FRC-orig\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Autonomous.o" "..\\src\\Autonomous.cpp" 
..\src\Autonomous.cpp: In member function 'void AUTONOMOUS::ExecWait4()':
..\src\Autonomous.cpp:412:107: error: no matching function for call to 'SmartDashboard::GetString(const char [19])'
  SmartDashboard::PutString("Autonomous Command", "Wait4_" + SmartDashboard::GetString("Autonomous Command"));
                                                                                                           ^
..\src\Autonomous.cpp:412:107: note: candidate is:
In file included from C:\Users\Cryogenica\Documents\GitHub\o2c\robot-dev\RoboRIO_workspace\O2C2015FRC-orig\src/Definitions.h:5:0,
                 from C:\Users\Cryogenica\Documents\GitHub\o2c\robot-dev\RoboRIO_workspace\O2C2015FRC-orig\src/Autonomous.h:11,
                 from ..\src\Autonomous.cpp:8:
C:\Users\Cryogenica/wpilib/cpp/current/include/SmartDashboard/SmartDashboard.h:33:22: note: static std::string SmartDashboard::GetString(llvm::StringRef, llvm::StringRef)
   static std::string GetString(llvm::StringRef keyName,
                      ^
C:\Users\Cryogenica/wpilib/cpp/current/include/SmartDashboard/SmartDashboard.h:33:22: note:   candidate expects 2 arguments, 1 provided
In file included from C:\Users\Cryogenica\Documents\GitHub\o2c\robot-dev\RoboRIO_workspace\O2C2015FRC-orig\src/Autonomous.h:11:0,
                 from ..\src\Autonomous.cpp:8:
C:\Users\Cryogenica\Documents\GitHub\o2c\robot-dev\RoboRIO_workspace\O2C2015FRC-orig\src/Definitions.h: At global scope:
C:\Users\Cryogenica\Documents\GitHub\o2c\robot-dev\RoboRIO_workspace\O2C2015FRC-orig\src/Definitions.h:165:5: warning: 'pMyFieldState' defined but not used [-Wunused-variable]
  } *pMyFieldState;
     ^

19:57:09 Build Finished (took 6s.773ms)

